@@ -1,6 +1,6 @@
 package org.cloudfoundry.multiapps.controller.core.resolvers.v2;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import org.cloudfoundry.multiapps.common.test.Tester;
@@ -8,18 +8,17 @@ import org.cloudfoundry.multiapps.common.test.Tester.Expectation;
 import org.cloudfoundry.multiapps.common.util.YamlParser;
 import org.cloudfoundry.multiapps.mta.handlers.v2.DescriptorParser;
 import org.cloudfoundry.multiapps.mta.model.DeploymentDescriptor;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class PartialDescriptorResolverTest {
+class PartialDescriptorResolverTest {
 
     private final Tester tester = Tester.forClass(getClass());
 
     @Test
-    public void testResolve() {
+    void testResolve() {
         Map<String, Object> deploymentDescriptorMap = new YamlParser().convertYamlToMap(getClass().getResourceAsStream("mtad.yaml"));
         DeploymentDescriptor descriptor = new DescriptorParser().parseDeploymentDescriptor(deploymentDescriptorMap);
-        PartialDescriptorReferenceResolver resolver = new PartialDescriptorReferenceResolver(descriptor,
-                                                                                             Collections.singletonList("plugins"));
+        PartialDescriptorReferenceResolver resolver = new PartialDescriptorReferenceResolver(descriptor, List.of("plugins"));
         tester.test(resolver::resolve, new Expectation(Expectation.Type.JSON, "resolved-mtad.json"));
     }
 
