@@ -74,7 +74,7 @@ class DataTerminationServiceTest {
     private AuditLoggingFacade auditLoggingFacade;
 
     @InjectMocks
-    private DataTerminationService dataTerminationService = createDataTerminationService();
+    private final DataTerminationService dataTerminationService = createDataTerminationService();
 
     @BeforeEach
     void setUp() throws Exception {
@@ -136,20 +136,20 @@ class DataTerminationServiceTest {
     }
 
     private List<ConfigurationSubscription> generateSubscriptions(boolean isExistSubscriptionData) {
-        return isExistSubscriptionData ? Collections.singletonList(new ConfigurationSubscription()) : Collections.emptyList();
+        return isExistSubscriptionData ? List.of(new ConfigurationSubscription()) : Collections.emptyList();
     }
 
     private List<ConfigurationEntry> generatedConfigurationEntries(boolean isExistConfigurationEntryData) {
         return isExistConfigurationEntryData
-            ? Collections.singletonList(new ConfigurationEntry("",
-                                                               "",
-                                                               Version.parseVersion("1"),
-                                                               "default",
-                                                               new CloudTarget(),
-                                                               "",
-                                                               Collections.emptyList(),
-                                                               "",
-                                                               null))
+            ? List.of(new ConfigurationEntry("test-providerNid",
+                                             "providerId",
+                                             Version.parseVersion("1"),
+                                             "default",
+                                             new CloudTarget(),
+                                             "content",
+                                             Collections.emptyList(),
+                                             "space",
+                                             null))
             : Collections.emptyList();
     }
 
