@@ -31,7 +31,6 @@ import org.cloudfoundry.client.lib.domain.ImmutableCloudEvent.ImmutableParticipa
 import org.cloudfoundry.client.lib.domain.ImmutableCloudMetadata;
 import org.cloudfoundry.client.lib.domain.ImmutableCloudServiceBinding;
 import org.cloudfoundry.client.lib.domain.ImmutableCloudServiceKey;
-import org.cloudfoundry.client.lib.domain.ServiceOperation;
 import org.cloudfoundry.multiapps.controller.client.lib.domain.ImmutableCloudServiceInstanceExtended;
 import org.cloudfoundry.multiapps.controller.core.cf.clients.EventsGetter;
 import org.cloudfoundry.multiapps.controller.core.cf.clients.ServiceGetter;
@@ -144,7 +143,7 @@ class DeleteServiceStepTest extends SyncFlowableStepTest<DeleteServiceStep> {
         when(client.getServiceKeys(serviceInstance)).thenReturn(serviceKeys);
         if (hasServiceBindings) {
             when(client.getServiceBindings(serviceInstance.getMetadata()
-                                                          .getGuid())).thenReturn(Collections.singletonList(createServiceBinding()));
+                                                          .getGuid())).thenReturn(List.of(createServiceBinding()));
         }
     }
 
@@ -156,10 +155,10 @@ class DeleteServiceStepTest extends SyncFlowableStepTest<DeleteServiceStep> {
 
     private List<CloudServiceKey> createServiceKeys(CloudServiceInstance serviceInstance, boolean hasServiceKeys) {
         if (hasServiceKeys) {
-            return Collections.singletonList(ImmutableCloudServiceKey.builder()
-                                                                     .name(SEVICE_KEY_NAME)
-                                                                     .serviceInstance(serviceInstance)
-                                                                     .build());
+            return List.of(ImmutableCloudServiceKey.builder()
+                                                   .name(SEVICE_KEY_NAME)
+                                                   .serviceInstance(serviceInstance)
+                                                   .build());
         }
         return Collections.emptyList();
     }
