@@ -1,9 +1,8 @@
 package org.cloudfoundry.multiapps.controller.process.steps;
 
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -15,12 +14,12 @@ import org.cloudfoundry.multiapps.common.util.JsonUtil;
 import org.cloudfoundry.multiapps.controller.core.cf.detect.DeployedMtaDetector;
 import org.cloudfoundry.multiapps.controller.core.model.DeployedMta;
 import org.cloudfoundry.multiapps.controller.process.variables.Variables;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 
-public class DetectDeployedMtaStepTest extends SyncFlowableStepTest<DetectDeployedMtaStep> {
+class DetectDeployedMtaStepTest extends SyncFlowableStepTest<DetectDeployedMtaStep> {
 
     private static final String MTA_ID = "com.sap.xs2.samples.helloworld";
     private static final String DEPLOYED_MTA_LOCATION = "deployed-mta-01.json";
@@ -28,12 +27,17 @@ public class DetectDeployedMtaStepTest extends SyncFlowableStepTest<DetectDeploy
     @Mock
     private DeployedMtaDetector deployedMtaDetector;
 
+    @BeforeEach
+    public void setUp() throws Exception {
+        prepareContext();
+    }
+
     @Test
-    public void testExecute3() {
+    void testExecute3() {
         when(client.getApplications()).thenReturn(Collections.emptyList());
 
         DeployedMta deployedMta = JsonUtil.fromJson(TestUtil.getResourceAsString(DEPLOYED_MTA_LOCATION, getClass()), DeployedMta.class);
-        List<DeployedMta> deployedComponents = Arrays.asList(deployedMta);
+        List<DeployedMta> deployedComponents = List.of(deployedMta);
 
         when(deployedMtaDetector.detectDeployedMtas(Mockito.any(CloudControllerClient.class))).thenReturn(deployedComponents);
         when(deployedMtaDetector.detectDeployedMtaByNameAndNamespace(Mockito.eq(MTA_ID), Mockito.eq(null), Mockito
@@ -48,7 +52,7 @@ public class DetectDeployedMtaStepTest extends SyncFlowableStepTest<DetectDeploy
     }
 
     @Test
-    public void testExecute4() {
+    void testExecute4() {
         when(client.getApplications()).thenReturn(Collections.emptyList());
         when(deployedMtaDetector.detectDeployedMtas(client)).thenReturn(Collections.emptyList());
         when(deployedMtaDetector.detectDeployedMtaByNameAndNamespace(MTA_ID, null, client, false)).thenReturn(Optional.empty());
@@ -57,11 +61,6 @@ public class DetectDeployedMtaStepTest extends SyncFlowableStepTest<DetectDeploy
         assertStepFinishedSuccessfully();
 
         assertNull(context.getVariable(Variables.DEPLOYED_MTA));
-    }
-
-    @Before
-    public void setUp() throws Exception {
-        prepareContext();
     }
 
     private void prepareContext() {
